agregado de funciones de registro y login

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">Inicio</a>
                         </li>
-                        <li class="nav-item">
+                        <li id="login" class="nav-item">
                             <a class="nav-link" href="./pages/login.html">Iniciar Sesión</a>
                         </li>
                         
@@ -80,8 +80,9 @@
             </div>
         </nav>
     </header>
-    <main class="container-fluid d-flex">
-        <section>
+    <main class="container-fluid d-flex flex-column">
+ <div class col-10> </div>
+            <section>
             <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active" data-bs-interval="5000">
@@ -294,6 +295,7 @@
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
     <script src="https://use.fontawesome.com/c2813ccf5b.js"></script>
+     <script src="/js/app.js"></script>
 </body>
 
 </html>
