Correcion de errores de avatar

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <div id="user-avatar">
                         <button type="button" class="btn  m-2 d-none d-md-none d-lg-block">
                             <img id="avatar"
-                            src="https://cdn.icon-icons.com/icons2/1879/PNG/64/iconfinder-3-avatar-2754579_120516.png" alt="Avatar 1" />
+                            src="" alt="Avatar 1" />
                         </button>
                     </div>
                     <div>
