--- a/index.html
+++ b/index.html
@@ -267,6 +267,37 @@
             </div>
         </section>
     </footer>
+    <!-- Modal user -->
+<div class="modal fade" id="perfilModal" tabindex="-1" aria-labelledby="perfilModal" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="tituloModal">Mi Perfil </h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div id="perfil-body"
+        class="modal-body">
+        <div> 
+            <div id="titulo-body">
+
+        </div>
+            <br></br>
+            <div id="change-email">
+
+            </div>
+            <label for="input" class="form-label">Ingrese el nuevo Email: </label>
+            <input type="email" id="inputEmail" class="form-control">
+            <label for="input" class="form-label">Ingrese su nueva contraseña: </label>
+            <input type="email" id="inputPassword" class="form-control">
+            </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+          <button id="savechange" type="button" class="btn btn-primary">Guardar Cambios</button>
+        </div>
+      </div>
+    </div>
+  </div>
     <!-- Modal -->
     <div class="modal fade" id="modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
