se corrige modal de recuperacion y se modifica auth para guardar la clave tambien

--- a/pages/login.html
+++ b/pages/login.html
@@ -199,39 +199,23 @@
             </div>
         </section>
     </footer>
-<!-- Modal del codigo de seguridad -->
+<!-- Modal del codigo de seguridad tanto para mostrarlo como para recuperacion de contraseña-->
 <div class="modal fade" id="codeModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">Codigo unico de Seguridad</h1>
-        <button id="closeAndRedirect" type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <h1 class="modal-title fs-5" id="exampleModalLabel"><b>Codigo unico de Seguridad</b></h1>
       </div>
       <div class="modal-body">
         <!-- Aqui se muestra el mensaje con el codigo -->
       </div>
       <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-bs-dismiss="modal" id="closeAndRedirect">Cerrar</button>
 </div>
     </div>
   </div>
 </div>
-<!-- Modal del código de recuperación -->
-<div class="modal fade" id="passrecoveryModal" tabindex="-1" aria-labelledby="passrecoveryLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="passrecoveryLabel">Código único de Recuperación</h1>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <!-- Aquí se muestra el mensaje con el código -->
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" id="passrecoveryClose">Cerrar</button>
-      </div>
-    </div>
-  </div>
-</div>
+
 <!-- Modal del formulario de suscripción -->
 <div class="modal fade" id="modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
