arreglo de modal edit

--- a/pages/admin.html
+++ b/pages/admin.html
@@ -55,7 +55,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Iniciar Sesión</a>
+                <a class="nav-link" href="/pages/login.html">Iniciar Sesión</a>
               </li>
 
               <li class="nav-item">
@@ -134,14 +134,14 @@
       <section class="p3">
         <div class="row">
           <div class="col-12">
-            <button class="btn btn-primary mt-2 ms-2" data-bs-toggle="modal" data-bs-target="#userForm">
+            <button class="btn btn-primary mt-2 ms-2" data-bs-toggle="modal" data-bs-target="#userForm" id="btnNew">
               Nuevo producto <i class="fa fa-laptop" aria-hidden="true"></i>
             </button>
           </div>
         </div>
 
         <div >
-          <div class="table-responsive">
+          <div >
     
             <table
               class="table table-striped table-hover mt-3 text-center table-bordered ms-2 me-2"
