correcion de errores de page admin

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         </button>
                     </div>
                     <div>
-                        <button type="button" class="btn btn-light m-2 d-none d-md-none d-lg-block">
+                        <button type="button" id="buttoncart" class="btn btn-light m-2 d-none d-md-none d-lg-block">
                             <i class="fa fa-shopping-cart" aria-hidden="true"></i>
                         </button>
                     </div>
@@ -81,7 +81,6 @@
                         type="button" class="btn btn-light m-2 d-none d-md-none d-lg-block">
                             Cerrar sesion
                         </button>
-                    
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Search" />
                         <button class="btn btn-outline-light" type="submit">
