--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title">Mi Carrito</h5>
+          <h5 class="modal-title">Mi Carrito 🛒</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div id="carrito-body"
@@ -207,7 +207,7 @@
         </div>
             </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
           <button id="pay" type="button" class="btn btn-danger">Comprar</button>
         </div>
       </div>
@@ -255,6 +255,6 @@
         crossorigin="anonymous"></script>
     <script src="https://use.fontawesome.com/c2813ccf5b.js"></script>
     <script src="/js/frontPage.js" type="module"></script>
-     <script src="/js/app.js"></script>
+    <script type="module" src="/js/app.js"></script>    
 </body>
 </html>
