--- a/pages/admin.html
+++ b/pages/admin.html
@@ -140,30 +140,34 @@
         </div>
       </nav>
     </header>
-    <main id="main-admin" class="d-flex flex-row vh-100 vw-100">
-      <section class="p3">
+    <main id="main-admin" class="d-flex flex-column vh-100 vw-100 mb-5">
+      <section id="admin-prod" class="p3 col-12">
         <div class="row">
           <div class="col-12">
-            <button class="btn btn-primary mt-2 ms-2" data-bs-toggle="modal" data-bs-target="#userForm" id="btnNew">
+            <button
+              class="btn btn-primary mt-2 ms-2"
+              data-bs-toggle="modal"
+              data-bs-target="#userForm"
+              id="btnNew"
+            >
               Nuevo producto <i class="fa fa-laptop" aria-hidden="true"></i>
             </button>
           </div>
         </div>
-        <div >
-          <div >
+        <div>
+          <div>
             <table
-              class="table table-striped table-hover mt-3 text-center table-bordered ms-2 me-2"
+              class="container text-center table table-striped table-hover mt-3 table-bordered ms-2 me-3"
             >
               <thead>
                 <tr>
-                  <th>ID</th>
-                  <th>Imagen</th>
-                  <th>Nombre</th>
-                  <th>Marca</th>
-                  <th>Precio</th>
-                  <th>Descripcion</th>
-                  <th>Stock</th>
-                  <th>Acción</th>
+                  <th class="col-1">ID</th>
+                  <th class="col-1">Imagen</th>
+                  <th class="col-2">Nombre</th>
+                  <th class="col-2">Marca</th>
+                  <th class="col-1">Precio</th>
+                  <th class="col-1">Stock</th>
+                  <th class="col-3">Acción</th>
                 </tr>
               </thead>
               <tbody id="data"></tbody>
@@ -171,9 +175,29 @@
           </div>
         </div>
       </section>
+      <section id="admin-user" class="p3 col-12 mt-3">
+        <div>
+          <div>
+            <table
+              class="container text-center table table-striped table-hover mt-3 table-bordered ms-2 me-2"
+            >
+              <thead>
+                <tr>
+                  <th class="col-2">Admin</th>
+                  <th class="col-4">Email</th>
+                  <th class="col-2">password</th>
+                  <th class="col-2">Codigo Rec.</th>
+                  <th class="col-2">Acción</th>
+                </tr>
+              </thead>
+              <tbody id="usuarios-data"></tbody>
+            </table>
+          </div>
+        </div>
+      </section>
     </main>
     <footer
-      class="container-fluid color d-flex flex-column justify-content-between"
+      class="footer-container navbar navbar-fixed-bottom color d-flex flex-column justify-content-between mt-5"
     >
       <section
         class="h-100 row py-2 flex-column flex-md-row align-items-md-center"
