--- a/pages/admin.html
+++ b/pages/admin.html
@@ -140,12 +140,15 @@
         </div>
       </nav>
     </header>
-    <main id="main-admin" class="d-flex flex-column vh-100 vw-100 mb-5">
+    <main
+      id="main-admin"
+      class="container d-flex flex-column vh-100 vw-100 mb-5"
+    >
       <section id="admin-prod" class="p3 col-12">
         <div class="row">
           <div class="col-12">
             <button
-              class="btn btn-primary mt-2 ms-2"
+              class="btn btn-primary mt-2 ms-1"
               data-bs-toggle="modal"
               data-bs-target="#userForm"
               id="btnNew"
@@ -154,40 +157,47 @@
             </button>
           </div>
         </div>
-        <div>
-          <div>
-            <table
-              class="container text-center table table-striped table-hover mt-3 table-bordered ms-2 me-3"
-            >
-              <thead>
-                <tr>
-                  <th class="col-1">ID</th>
-                  <th class="col-1">Imagen</th>
-                  <th class="col-2">Nombre</th>
-                  <th class="col-2">Marca</th>
-                  <th class="col-1">Precio</th>
-                  <th class="col-1">Stock</th>
-                  <th class="col-3">Acción</th>
-                </tr>
-              </thead>
-              <tbody id="data"></tbody>
-            </table>
-          </div>
+        <div class="d-flex">
+          <table
+            class="d-none d-sm-block container text-center table table-striped table-hover mt-3 table-bordered"
+          >
+            <thead class="table-header">
+              <tr>
+                <th class="col-1">ID</th>
+                <th class="col-1">Imagen</th>
+                <th class="col-2">Nombre</th>
+                <th class="col-2">Marca</th>
+                <th class="col-1">Precio</th>
+                <th class="col-1">Stock</th>
+                <th class="col-3">Acción</th>
+              </tr>
+            </thead>
+            <tbody id="data">
+              <!-- Aquí van los datos de la tabla -->
+            </tbody>
+          </table>
+        </div>
+        <!-- Menú desplegable para dispositivos móviles -->
+        <div class="flex-col p3 col-12 mt-3 d-sm-none">
+          <select class="form-select mt-3" id="mobile-product-menu">
+            <option selected>Productos disponibles</option>
+            <!-- Aquí van las opciones del menú -->
+          </select>
         </div>
       </section>
       <section id="admin-user" class="p3 col-12 mt-3">
         <div>
-          <div>
+          <div class="d-flex">
             <table
-              class="container text-center table table-striped table-hover mt-3 table-bordered ms-2 me-2"
+              class="d-none d-sm-block container text-center table table-striped table-hover mt-3 table-bordered ms-2"
             >
               <thead>
                 <tr>
-                  <th class="col-2">Admin</th>
+                  <th class="col-1">Admin</th>
                   <th class="col-4">Email</th>
                   <th class="col-2">password</th>
                   <th class="col-2">Codigo Rec.</th>
-                  <th class="col-2">Acción</th>
+                  <th class="col-3">Acción</th>
                 </tr>
               </thead>
               <tbody id="usuarios-data"></tbody>
@@ -195,6 +205,13 @@
           </div>
         </div>
       </section>
+      <!-- Menú desplegable para dispositivos móviles -->
+      <div class="flex-col p3 col-12 mt-3 d-sm-none">
+        <select class="form-select mt-3" id="mobile-product-menu">
+          <option selected>Usuarios registrados</option>
+          <!-- Aquí van las opciones del menú -->
+        </select>
+      </div>
     </main>
     <footer
       class="footer-container navbar navbar-fixed-bottom color d-flex flex-column justify-content-between mt-5"
