--- a/pages/admin.html
+++ b/pages/admin.html
@@ -159,14 +159,14 @@
         </div>
         <div class="d-flex">
           <table
-            class="d-none d-sm-block container text-center table table-striped table-hover mt-3 table-bordered"
+            class="d-none d-sm-block container text-center table table-dark table-striped table-hover mt-3 table-bordered ms-2"
           >
             <thead class="table-header">
-              <tr>
+              <tr class="table-warning">
                 <th class="col-1">ID</th>
                 <th class="col-1">Imagen</th>
-                <th class="col-2">Nombre</th>
-                <th class="col-2">Marca</th>
+                <th class="col-1">Nombre</th>
+                <th class="col-1">Marca</th>
                 <th class="col-1">Precio</th>
                 <th class="col-1">Stock</th>
                 <th class="col-3">Acción</th>
@@ -189,10 +189,10 @@
         <div>
           <div class="d-flex">
             <table
-              class="d-none d-sm-block container text-center table table-striped table-hover mt-3 table-bordered ms-2"
+              class="d-none d-sm-block container text-center table table-dark table-striped table-hover mt-3 table-bordered ms-2"
             >
               <thead>
-                <tr>
+                <tr class="table-danger">
                   <th class="col-1">Admin</th>
                   <th class="col-4">Email</th>
                   <th class="col-2">password</th>
@@ -271,7 +271,7 @@
     <div class="modal fade" id="userForm">
       <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content">
-          <div class="modal-header">
+          <div class="modal-header bg-warning bg-gradient">
             <h4 class="modal-title">Rellena el formulario</h4>
             <button
               class="btn-close"
@@ -347,7 +347,7 @@
     <div class="modal fade" id="readData">
       <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content">
-          <div class="modal-header">
+          <div class="modal-header bg-success bg-gradient">
             <h4 class="modal-title">Producto</h4>
             <button
               class="btn-close"
@@ -439,6 +439,107 @@
       </div>
     </div>
     <!-- 2 -->
+    <div
+      class="modal fade"
+      id="userModal"
+      tabindex="-1"
+      aria-labelledby="userModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="titulouserModalLabel">
+              Modal title
+            </h1>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body" id="bodyuserModal">
+            <form id="userForm">
+              <div class="mb-3">
+                <label for="nombre" class="form-label">Nombre</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="nombre"
+                  name="nombre"
+                  required
+                />
+              </div>
+              <div class="mb-3">
+                <label for="email" class="form-label">Email</label>
+                <input
+                  type="email"
+                  class="form-control"
+                  id="email"
+                  name="email"
+                  required
+                />
+              </div>
+              <div class="mb-3">
+                <label for="password" class="form-label">Contraseña</label>
+                <input
+                  type="password"
+                  class="form-control"
+                  id="password"
+                  name="password"
+                  required
+                />
+              </div>
+              <div class="mb-3">
+                <label for="codigoSeguridad" class="form-label"
+                  >Código de Seguridad</label
+                >
+                <input
+                  type="text"
+                  class="form-control"
+                  id="codigoSeguridad"
+                  name="codigoSeguridad"
+                  required
+                />
+              </div>
+              <div class="mb-3">
+                <label for="avatar" class="form-label"
+                  >Avatar (URL de la imagen)</label
+                >
+                <input
+                  type="text"
+                  class="form-control"
+                  id="avatar"
+                  name="avatar"
+                />
+              </div>
+              <div class="mb-3">
+                <label for="admin" class="form-label">Estado de Admin</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="admin"
+                  name="admin"
+                  required
+                />
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- 3 -->
     <div
       class="modal fade"
       id="modal"
