configuracion de menu desplegable de productos y usuarios en dipositivos moviles

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         type="button" class="btn btn-light m-2 d-none d-md-none d-lg-block">
                             Cerrar sesion
                         </button>
-                    <form class="d-flex" role="search">
+                    <form id="search" class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Search" />
                         <button class="btn btn-outline-light" type="submit">
                             <i class="fa fa-search" aria-hidden="true"></i>
