--- a/pages/admin.html
+++ b/pages/admin.html
@@ -106,7 +106,7 @@
             </ul>
             <div id="user-avatar">
               <button type="button" class="btn m-2 d-none d-md-none d-lg-block">
-                <img id="avataruser" src="leo" alt="Avatar 1" />
+                <img id="avataruser" src="" alt="Avatar 1" />
               </button>
             </div>
             <div>
@@ -126,7 +126,7 @@
             >
               Cerrar sesion
             </button>
-            <form class="d-flex" role="search">
+            <form id="search" class="d-flex" role="search">
               <input
                 class="form-control me-2"
                 type="search"
@@ -143,33 +143,31 @@
     </header>
     <main
       id="main-admin"
-      class="container d-flex flex-column vh-100 vw-100 mb-5"
+      class="container-fluid d-flex flex-column mb-5 p-0 m-0 w-100"
     >
-      <section id="admin-prod" class="p3 col-12">
-        <div class="row">
-          <div class="col-12">
-            <button
-              class="btn btn-primary mt-2 ms-1"
-              data-bs-toggle="modal"
-              data-bs-target="#userForm"
-              id="btnNew"
-            >
-              Nuevo producto <i class="fa fa-laptop" aria-hidden="true"></i>
-            </button>
-          </div>
+      <section id="admin-prod" class="w-100 p3 col-12">
+        <div class="col-12">
+          <button
+            class="btn btn-primary mt-2 ms-1"
+            data-bs-toggle="modal"
+            data-bs-target="#userForm"
+            id="btnNew"
+          >
+            Nuevo producto <i class="fa fa-laptop" aria-hidden="true"></i>
+          </button>
         </div>
-        <div class="d-flex">
+        <div class="d-flex d-none d-sm-block">
           <table
-            class="d-none d-sm-block container text-center table table-dark table-striped table-hover mt-3 table-bordered ms-2"
+            class="container text-center table table-dark table-striped table-hover mt-3 table-bordered m-0 p-0 ms-2"
           >
             <thead class="table-header">
-              <tr class="table-warning">
-                <th class="col-1">ID</th>
-                <th class="col-1">Imagen</th>
-                <th class="col-1">Nombre</th>
+              <tr class="table-warning d-flex">
+                <th class="col-1 d-none d-sm-block">ID</th>
+                <th class="col-2 d-none d-sm-block">Imagen</th>
+                <th class="col-3">Nombre</th>
                 <th class="col-1">Marca</th>
                 <th class="col-1">Precio</th>
-                <th class="col-1">Stock</th>
+                <th class="col-1 d-none d-sm-block">Stock</th>
                 <th class="col-3">Acción</th>
               </tr>
             </thead>
@@ -188,14 +186,14 @@
       </section>
       <section id="admin-user" class="p3 col-12 mt-3">
         <div>
-          <div class="d-flex">
+          <div class="d-flex d-none d-sm-block">
             <table
-              class="d-none d-sm-block container text-center table table-dark table-striped table-hover mt-3 table-bordered ms-2"
+              class="container text-center table table-dark table-striped table-hover mt-3 table-bordered ms-2"
             >
               <thead>
-                <tr class="table-danger">
-                  <th class="col-1">Admin</th>
-                  <th class="col-4">Email</th>
+                <tr class="table-danger d-flex">
+                  <th class="col-2">Admin</th>
+                  <th class="col-3">Email</th>
                   <th class="col-2">password</th>
                   <th class="col-2">Codigo Rec.</th>
                   <th class="col-3">Acción</th>
@@ -207,8 +205,8 @@
         </div>
       </section>
       <!-- Menú desplegable para dispositivos móviles -->
-      <div class="flex-col p3 col-12 mt-3 d-sm-none">
-        <select class="form-select mt-3" id="mobile-product-menu">
+      <div id="menu-user" class="flex-col p3 col-12 mt-3 d-sm-none">
+        <select class="form-select mt-3" id="mobile-user-menu">
           <option selected>Usuarios registrados</option>
           <!-- Aquí van las opciones del menú -->
         </select>
@@ -351,6 +349,7 @@
           <div class="modal-header bg-success bg-gradient">
             <h4 class="modal-title">Producto</h4>
             <button
+              type="button"
               class="btn-close"
               data-bs-dismiss="modal"
               aria-label="Close"
@@ -492,7 +491,7 @@
               class="mb-3 col 6 ms-2 d-flex align-items-center"
             ></div>
             <div
-              id="admin"
+              id="adminstatus"
               class="mb-3 col 6 ms-2 d-flex align-items-center"
             ></div>
           </div>
@@ -505,7 +504,7 @@
               Close
             </button>
             <button type="button" class="btn btn-primary" id="btn-guardar">
-              Save changes
+              Guardar Cambios
             </button>
           </div>
         </div>
