correcion de footer

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -170,7 +170,7 @@
             </div>
         </div>
     </main>
-    <footer class="container-fluid color d-flex flex-column justify-content-between">
+    <footer class="container-fluid color d-flex flex-column justify-content-end align-items-end align-self-end">
         <section class="h-100 row py-2 flex-column flex-md-row align-items-md-center">
             <div class="col logo-footer text-center mb-3 logo-footer">
                 <img src="/assets/logo 3.png" alt="logo" />
