--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -8,15 +7,12 @@
     <meta name="author" content="STORE NOTE" />
     <meta name="keywords" content="notebook, maquinas, laptops, shop, store, tienda" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <link rel="shortcut icon" href="./assets/favicon.png" type="favicon/png" />
-
-    <title>Store Note</title>
+    <title>Store NOTE 💻</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
     <link rel="stylesheet" href="/css/styles.css" />
 </head>
-
 <body class="color-sec p-0 m-0">
     <header class="fixed w-100">
         <nav class="navbar navbar-expand-lg navbar-dark color">
@@ -71,23 +67,23 @@
                         </div>
                     </ul>
                     <div id="user-avatar">
-                        <button type="button" class="btn  m-2 d-none d-md-none d-lg-block">
+                        <button type="button" class="btn m-1 d-none d-md-none d-lg-block">
                             <img id="avatar"
                             src="" alt="Avatar 1" />
                         </button>
                     </div>
                     <div>
-                        <button type="button" id="buttoncart" class="btn btn-light m-2 d-none d-md-none d-lg-block">
+                        <button type="button" id="buttoncart" class="btn btn-light m-1 d-none d-md-none d-lg-block">
                             <i class="fa fa-shopping-cart" aria-hidden="true"></i>
                         </button>
                     </div>
                     
                         <button id="close-user"
-                        type="button" class="btn btn-light m-2 d-none d-md-none d-lg-block">
+                        type="button" class="btn btn-light m-1 d-none d-md-none d-lg-block">
                             Cerrar sesion
                         </button>
                     <form id="search" class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Search" />
+                        <input class="form-control me-1" type="search" placeholder="Buscar..." aria-label="Search" />
                         <button class="btn btn-outline-light" type="submit">
                             <i class="fa fa-search" aria-hidden="true"></i>
                         </button>
@@ -138,6 +134,9 @@
                     <img src="./assets/wsp.png" alt="logo store" />
                 </a>
             </div>
+             <div class="d-block d-md-block d-sm-none cartflot p-0 pe-6">
+                <img id="cartfloat" src="https://icon-library.com/images/online-shopping-icon/online-shopping-icon-13.jpg" alt="icono-cart">
+            </div>
         </section>
     </main>
     <footer class="container-fluid color d-flex flex-column justify-content-between ">
@@ -177,11 +176,9 @@
         class="modal-body">
         <div> 
             <div id="titulo-body">
-
         </div>
             <br></br>
             <div id="change-email">
-
             </div>
             <label for="input" class="form-label">Ingrese el nuevo Email: </label>
             <input type="email" id="inputEmail" class="form-control">
@@ -220,39 +217,38 @@
   </div>
         </div>
     <!-- Modal -->
-    <div class="modal fade" id="modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header color texto-color">
-                    <h1 class="modal-title fs-5" id="exampleModalLabel">
-                        Suscríbete
-                    </h1>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <form>
-                        <div class="row">
-                            <div class="col-10">
-                                <label for="nombre">Nombre completo:</label>
-                                <input type="text" id="nombre" name="nombre" required placeholder="Carolina Juarez">
-                                <br><br>
-                                <label for="correo">Correo electrónico:</label>
-                                <input type="email" id="correo" name="email" required placeholder="name@example.com">
-                                </label>
-                                <br>
-                                <br>
-                                <div class="d-flex justify-content-end">
-                                    <button class="btn btn-primary btn-form mb-2">
-                                        Enviar
-                                    </button>
-                                </div>
-                                <br>
-                            </div>
-                        </div>
-                    </form>
-                </div>
+   <div
+      class="modal fade"
+      id="modal"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header bg-danger texto-color">
+            <h1 class="modal-title fs-5 bg-danger" id="exampleModalLabel">Formulario de Suscripcion</h1>
+            <button
+              type="button btn btn-dark"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+             <div class="input-group mb-3">
+  <input type="text" class="form-control" placeholder="Nombre Completo" aria-label="email" aria-describedby="basic-addon2">
+  <span class="input-group-text" id="basic-addon2">Juan Perez</span>
+</div>
+            <div class="input-group mb-3">
+  <input type="text" class="form-control" placeholder="Email" aria-label="email" aria-describedby="basic-addon2">
+  <span class="input-group-text" id="basic-addon2">rolling@example.com</span>
             </div>
+<div class="d-grid gap-2 d-md-flex justify-content-md-end">
+  <button class="btn btn-danger" type="button">Suscribirse</button>
+</div>
         </div>
+      </div>
     </div>
     <!-- scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
