--- a/pages/hp.html
+++ b/pages/hp.html
@@ -124,28 +124,39 @@
         </section>
     </footer>
     <!-- modal del carrito -->
-  <div class="modal fade" id="carritoModal" tabindex="-1" aria-labelledby="carritoModal" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title">Mi Carrito 🛒</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div id="carrito-body"
-        class="modal-body d-flex flex-col">
-        <div class="col-4" id="img-up">
-        </div>
-        <div class="col-4 mt-4" id="name-product">
-        </div>
+  <div
+      class="modal fade"
+      id="modal"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header bg-danger texto-color">
+            <h1 class="modal-title fs-5 bg-danger" id="exampleModalLabel">Formulario de Suscripcion</h1>
+            <button
+              type="button btn btn-dark"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+             <div class="input-group mb-3">
+  <input type="text" class="form-control" placeholder="Nombre Completo" aria-label="email" aria-describedby="basic-addon2">
+  <span class="input-group-text" id="basic-addon2">Juan Perez</span>
+</div>
+            <div class="input-group mb-3">
+  <input type="text" class="form-control" placeholder="Email" aria-label="email" aria-describedby="basic-addon2">
+  <span class="input-group-text" id="basic-addon2">rolling@example.com</span>
             </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-          <button id="pay" type="button" class="btn btn-danger">Comprar</button>
+<div class="d-grid gap-2 d-md-flex justify-content-md-end">
+  <button class="btn btn-danger" type="button">Suscribirse</button>
+</div>
         </div>
       </div>
     </div>
-  </div>
-        </div>
     <!-- Modal -->
     <div class="modal fade" id="modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
