se crea el buscador y la page de resultados

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
                             Cerrar sesion
                         </button>
                     <form id="search" class="d-flex" role="search">
-                        <input class="form-control me-1" type="search" placeholder="Buscar..." aria-label="Search" />
-                        <button class="btn btn-outline-light" type="submit">
+                        <input id="searchinput" class="form-control me-1" type="search" placeholder="Buscar..." aria-label="Search" />
+                        <button id="btnsearch" class="btn btn-outline-light" type="submit">
                             <i class="fa fa-search" aria-hidden="true"></i>
                         </button>
                     </form>
@@ -134,8 +134,8 @@
                     <img src="./assets/wsp.png" alt="logo store" />
                 </a>
             </div>
-             <div class="d-block d-md-block d-sm-none cartflot p-0 pe-6">
-                <img id="cartfloat" src="https://icon-library.com/images/online-shopping-icon/online-shopping-icon-13.jpg" alt="icono-cart">
+             <div class="d-block d-md-block d-sm-none d-lg-none cartflot p-0 pe-6">
+                <img id="cartfloat" src="./assets/shopping-cart.png" alt="icono-cart">
             </div>
         </section>
     </main>
