se modifica la seleccion de marca al cargar producto mediante menu desplegable y ya no mediante ingreso de texto

--- a/pages/admin.html
+++ b/pages/admin.html
@@ -289,9 +289,13 @@
                   <input type="text" name="" id="imgurl" class="form-control" />
                 </div>
                 <div>
-                  <label for="brand" class="form-label">Inserte Marca</label>
-
-                  <input type="text" name="" id="brand" class="form-control" />
+                  <label for="brand" class="form-label">Seleccione una Marca</label>
+<select name="brand" id="brand" class="form-select">
+    <option value="asus">Asus</option>
+    <option value="hp">HP</option>
+    <option value="msi">MSI</option>
+    <option value="acer">Acer</option>
+</select>
                 </div>
                 <div>
                   <label for="name" class="form-label"
