correcion de panel admin de productos y usuarios

--- a/pages/admin.html
+++ b/pages/admin.html
@@ -192,9 +192,8 @@
             >
               <thead>
                 <tr class="table-danger d-flex">
-                  <th class="col-2">Admin</th>
-                  <th class="col-3">Email</th>
-                  <th class="col-2">password</th>
+                  <th class="col-3">Admin</th>
+                  <th class="col-4">Email</th>
                   <th class="col-2">Codigo Rec.</th>
                   <th class="col-3">Acción</th>
                 </tr>
@@ -271,7 +270,7 @@
       <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content">
           <div class="modal-header bg-warning bg-gradient">
-            <h4 class="modal-title">Rellena el formulario</h4>
+            <h4 class="modal-title">titulo</h4>
             <button
               class="btn-close"
               data-bs-dismiss="modal"
@@ -339,7 +338,7 @@
           </div>
 
           <div class="modal-footer">
-            <button type="submit" form="myForm" class="btn btn-primary submit">
+            <button id="guardar" type="submit" form="myForm" class="btn btn-primary submit">
               Guardar
             </button>
           </div>
@@ -351,7 +350,7 @@
       <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content">
           <div class="modal-header bg-success bg-gradient">
-            <h4 class="modal-title">Producto</h4>
+            <h4 class="modal-title">Info del Producto</h4>
             <button
               type="button"
               class="btn-close"
@@ -452,7 +451,7 @@
     >
       <div class="modal-dialog">
         <div class="modal-content">
-          <div class="modal-header">
+          <div id="modal-header-user" class="modal-header">
             <h1 class="modal-title fs-5" id="titulouserModalLabel">
               Modal title
             </h1>
@@ -505,7 +504,7 @@
               class="btn btn-secondary"
               data-bs-dismiss="modal"
             >
-              Close
+              Cerrar  
             </button>
             <button type="button" class="btn btn-primary" id="btn-guardar">
               Guardar Cambios
