agrego botones al modal del carrito y mejoras

--- a/pages/admin.html
+++ b/pages/admin.html
@@ -47,6 +47,7 @@
           <div
             class="col collapse navbar-collapse justify-content-center align-items-center"
             id="navbarSupportedContent"
+            style="height: 72px"
           >
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 gap-3">
               <li class="nav-item">
@@ -106,7 +107,7 @@
             </ul>
             <div id="user-avatar">
               <button type="button" class="btn m-2 d-none d-md-none d-lg-block">
-                <img id="avataruser" src="" alt="Avatar 1" />
+                <img id="avatar" src="" alt="Avatar 1" />
               </button>
             </div>
             <div>
