Arreglo de errores en marca,pagina principal y contacto

--- a/pages/asus.html
+++ b/pages/asus.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="../css/styles.css" />
 </head>
 
-<body class="d-flex flex-column vh-100 justify-content-between align-items-center color-sec">
+<body class="d-flex flex-column min-vh-100 justify-content-between align-items-center color-sec">
     <header class="fixed w-100">
         <nav class="navbar navbar-expand-lg navbar-dark color">
             <div class="container-fluid text-center">
@@ -79,7 +79,7 @@
             </div>
         </nav>
     </header>
-    <main class="container-fluid justify-content-center align-items-center">
+    <main class="container justify-content-center align-items-center ">
         <div class="container-fluid bg-trasparent my-4 p-3" style="position: relative;">
             <div class="row row-cols-1 row-cols-xs-2 row-cols-sm-2 row-cols-lg-4 g-3" id="acerCard">
                
