--- a/pages/contact.html
+++ b/pages/contact.html
@@ -17,8 +17,8 @@
     <link rel="stylesheet" href="/css/styles.css" />
 </head>
 
-<body class="container-fluid d-flex flex-column p-0  justify-content-center">
-    <header class="fixed">
+<body class="d-flex flex-column min-vh-100 justify-content-between align-items-center color-sec imagemain">
+    <header class="fixed w-100">
         <nav class="navbar navbar-expand-lg navbar-dark color">
             <div class="container-fluid text-center">
                 <a class="navbar-brand" href="../index.html">
@@ -80,7 +80,7 @@
             </div>
         </nav>
     </header>
-    <main class="container-fluid p-0 mt-0 h-100 imagemain">
+    <main class="container-fluid p-0 mt-0 h-100 ">
         <div class="container-fluid m-0 p-0 mb-2 h-100 pt-3">
             <div class="row justify-content-center w-100 m-0 h-100">
                 <div class="col-11 col-md-8 col-lg-6 col-xl-5 p-0 mt-1 mb-1">
